--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "neo4j-driver": "^4.1.1"
+    "neo4j-driver": "^4.1.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
